--- a/index.html
+++ b/index.html
@@ -15,36 +15,38 @@
         <button id="searchButton">Search</button>
     </header>
 
-    <!-- Character list grid -->
+    <!-- Loading Indicator -->
     <div id="loadingIndicator" class="loading-indicator">Loading characters...</div>
+
+    <!-- Character List Grid -->
     <div id="character-list" class="character-grid" style="display: none;">
         <!-- Characters will be loaded here dynamically -->
     </div>
 
-    <!-- Character Details -->
-    <!-- Character Details -->
+    <!-- Character Details Section -->
     <div id="character-details" class="character-details">
-        <button id="backButton"><--- Back</button>
-        <div class="character-info" style="display: flex; justify-content: space-between; align-items: center; padding: 20px;">
-            <!-- Left half (Character Image) -->
-            <div style="flex: 1; text-align: center;">
-                <img id="characterImage" src="" alt="Character Image" style="width: 80%; border-radius: 10px;">
-            </div>
-
-            <!-- Right half (Description) -->
-            <div style="flex: 1; text-align: left; padding-left: 20px;">
-                <h2 id="characterName"></h2>
-                <p id="characterDescription"></p>
-                <div id="characterExtraInfo"></div>
-
-                <div id="movieTrailer">
-                    <button id="movieTrailerButton">🎬 Movie Trailer</button>
-                    <iframe id="trailerIframe" width="560" height="315" src="" frameborder="0" allowfullscreen style="display: none;"></iframe>
+        <button id="backButton">&larr; Back</button>
+        <div class="character-info">
+            <div class="character-info-content">
+                <!-- Character Image -->
+                <img id="characterImage" src="" alt="Character Image" class="character-image">
+                <!-- Character Info -->
+                <div class="character-description">
+                    <h2 id="characterName"></h2>
+                    <p id="characterDescription"></p>
+                    <div id="characterExtraInfo"></div>
                 </div>
+            </div>
+            <!-- Movie Trailer Section -->
+            <div id="movieTrailer" style="margin-top: 20px;">
+                <button id="movieTrailerButton"> Movie Trailer</button>
+                <!-- Trailer Iframe (hidden by default) -->
+                <iframe id="trailerIframe" src="" frameborder="0" allowfullscreen style="display: none; width: 100%; height: 315px; margin-top: 20px;"></iframe>
+                <!-- Error Message for invalid link -->
+                <div id="trailerError" style="display: none; color: red; font-size: 1.2rem; margin-top: 10px;"></div>
             </div>
         </div>
     </div>
-
 
     <script src="mySketch.js"></script>
 </body>
